added colors suppr by mistake : red, yellow,orange, green in assets stylesheet

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,3 +4,7 @@ $blue: #023E8A;
 $gray: #414141;
 $light-gray: #585858;
 $white: #FFFFFF;
+$red: #FD1015;
+$yellow: #FFC65A;
+$orange: #E67E22;
+$green: #1EDD88;
