--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%# Navbar %>
+<div class="navbar">
+
+</div>
+<%# Banner %>
+<div class="banner">
+  <div class="container">
+    <h1>Pages#home</h1>
+    <p>Find me in app/views/pages/home.html.erb</p>
+    <%# Searchbar %>  
+  </div>
+</div>
+
+<%# Cards %>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      <div class="card"></div>
+    </div>
+    <div class="col-4">
+      <div class="card"></div>
+    </div>
+    <div class="col-4">
+      <div class="card"></div>
+    </div>
+  </div>
+</div>
