--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   <div class="container">
     <h1>Pages#home</h1>
     <p>Find me in app/views/pages/home.html.erb</p>
-    <%# Searchbar %>  
+    <%# Searchbar %>
   </div>
 </div>
 
@@ -15,13 +15,16 @@
 <div class="container">
   <div class="row">
     <div class="col-4">
-      <div class="card"></div>
-    </div>
-    <div class="col-4">
-      <div class="card"></div>
-    </div>
-    <div class="col-4">
-      <div class="card"></div>
+
+      <!-- Display last 3 conveyings created in DB -->
+      <% @last_three_conveyings.each do |conveying| %>
+        <div class="card">
+          <%= conveying.start_location %> > <%= conveying.arrival_location %>
+          before <%= conveying.arrival_date %>
+          <%= conveying.price %>€
+        </div>
+      <% end %>
+
     </div>
   </div>
 </div>
