--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,29 +1,29 @@
-  <form class="m-3">
-    <div class="form-row search-bar justify-content-between">
-      <div class="col-auto">
+  <form class="full-width">
+    <div class="form-row search-bar justify-content-between py-2">
+      <div class="col-2">
         <div class="d-flex justify-content-center align-items-center border-right">
           <i class="fas fa-calendar light-grey"></i>
           <input type="text" class="form-control no-border" placeholder="Date de départ">
         </div>
       </div>
-      <div class="col-auto">
+      <div class="col-2">
         <div class="d-flex justify-content-center align-items-center border-right">
           <i class="fas fa-search-location light-grey"></i>
           <input type="text" class="form-control no-border" placeholder="Lieu de départ">
         </div>
       </div>
-      <div class="col-auto">
+      <div class="col-2">
         <div class="d-flex justify-content-center align-items-center border-right">
           <i class="fas fa-ship light-grey"></i>
           <input type="text" class="form-control no-border" placeholder="Type de bateau">
         </div>
       </div>
-      <div class="col-auto d-flex justify-content-center align-items-center">
+      <div class="col-2 d-flex justify-content-center align-items-center">
           <i class="fas fa-money-bill-wave light-grey"></i>
           <input type="text" class="form-control no-border" placeholder="Rémunération">
       </div>
-      <div class="col-1 d-flex justify-content-end">
-        <button type="submit" class="btn mb-2"><i class="fas fa-search blue"></i></button>
+      <div class="col-1 d-flex justify-content-end align-items-center">
+        <button type="submit" class="btn"><i class="fas fa-search blue"></i></button>
       </div>
     </div>
   </form>
