--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,10 +16,10 @@
   <div class="row my-3">
     <!-- Display last 3 conveyings created in DB -->
     <% @last_three_conveyings.each do |conveying| %>
+
+     <!-- display en 3 colonnes -->
       <div class="col-4">
-
         <div class="card">
-
           <img src="https://source.unsplash.com/random" alt="boat picture" />
           <div class="card-infos">
             <div >
@@ -28,23 +28,8 @@
             </div>
             <h2><%= conveying.price %>€</h2>
           </div>
-
         </div>
-
-<!-- MY HTML -->
-<!--         <div class="card">
-          <img src="https://source.unsplash.com/random" alt="boat picture">
-
-          <h2> <%= conveying.start_location %> > <%= conveying.arrival_location %></h2>
-          <div class="card-info">
-            <h2>before <%= conveying.arrival_date %></h2>
-            <p><%= conveying.price %>€</p>
-          </div>
-
-        </div> -->
-
       </div>
     <% end %>
-
   </div>
 </div>
