--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,24 @@
-<h2>Sign up</h2>
+<div class="container pt-5 col-6">
+<h2 class="text-center mb-5">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <div class="form-row">
+      <div class="col-6 form-group">
     <%= f.input :first_name,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "first name" }%>
+      </div>
+      <div class="col-6 form-group">
     <%= f.input :last_name,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "last name" }%>
+      </div>
+    </div>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -26,8 +33,9 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", :class => "btn btn-primary btn-lg w-100" %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
+</div>
