beg front on show conveys

--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -1,1 +1,18 @@
-<h1><%= @conveying.boat_name %></h1>
+<h2><%= @conveying.boat_name %></h2>
+
+<div class="conveying-infos">
+  <div class="boat-pictures">
+    <img src="https://source.unsplash.com/random" alt="main-boat-pic">
+    <img src="https://source.unsplash.com/random" alt="main-boat-pic">
+    <img src="https://source.unsplash.com/random" alt="main-boat-pic">
+    <img src="https://source.unsplash.com/random" alt="main-boat-pic">
+  </div>
+
+  <div class="boat-details">
+    <h2>les détails du bateau</h2>
+    <h2>Ajouter des dates pour ce convoyage</h2>
+    <h2>Envoyer la demande</h2>
+  </div>
+</div>
+
+
