--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,6 +2,7 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  text-decoration: none;
 
   & img {
     height: 200px;
@@ -20,7 +21,6 @@
     opacity: .7;
     margin-top: 16px;
   }
-
 }
 
 .card-infos {
@@ -30,4 +30,8 @@
     align-items: flex-end;
   }
 
+.card:hover{
+  border: 2px solid;
+  border-color: $gray;
+}
 
