--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -23,7 +23,9 @@
           <input type="text" class="form-control no-border" placeholder="Rémunération">
       </div>
       <div class="col-1 d-flex justify-content-end align-items-center">
-        <button type="submit" class="btn"><i class="fas fa-search blue"></i></button>
+        <%= link_to conveyings_path do %>
+          <button type="submit" class="btn"><i class="fas fa-search blue"></i></button>
+        <% end %>
       </div>
     </div>
   </form>
