--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,10 @@
      <!-- display en 3 colonnes -->
       <div class="col-4">
         <div class="card">
-          <img src="https://source.unsplash.com/random" alt="boat picture" />
+            <%  conveying.photos.each do |photo|%>
+            <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+            <% end %>
+            <!-- <img src="https://source.unsplash.com/random" alt="boat picture" /> -->
           <div class="card-infos">
             <div >
               <h2><%= conveying.start_location %> > <%= conveying.arrival_location %></h2>
