fix display de la nav bar

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,8 @@
   background-size: cover;
   background-position: 50% 75%;
   height: 80vh;
+  position: relative;
+  top: -66px;
 }
 
 .banner .container {
