--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
+  z-index: 1;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -11,6 +12,12 @@
 }
 
 .sticky {
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+
+.fixed {
   position: fixed;
   top: 0;
   width: 100%;
