--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -31,9 +31,7 @@
   }
 
 .card:hover{
-  border: 1px solid;
-
-  box-shadow: 15px 15px 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
 
 }
 
