--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,13 +2,23 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  text-decoration: none;
+
+  & a:hover{
+    text-decoration: none;
+  }
 
   & img {
     height: 200px;
     width: 100%;
     object-fit: cover;
   }
+
+.card-infos {
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    text-decoration: none;
 
   h2 {
     font-size: 16px;
@@ -20,18 +30,14 @@
     font-size: 12px;
     opacity: .7;
     margin-top: 16px;
+    }
   }
 }
-
-.card-infos {
-    padding: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
 
 .card:hover{
   box-shadow: 0 0 15px rgba(0,0,0,0.4);
-
 }
 
+.card a:hover{
+  text-decoration: none;
+}
