--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,6 +11,8 @@
 <%# Cards %>
 <div class="container">
 
+  <h2>Most recent conveyings</h2>
+  <br>
   <div class="row my-3">
     <!-- Display last 3 conveyings created in DB -->
     <% @last_three_conveyings.each do |conveying| %>
