--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,9 +19,7 @@
       <div class="col-4">
         <%= link_to conveying_path(conveying) do %>
         <div class="card">
-          <%  conveying.photos.each do |photo|%>
-          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-          <% end %>
+          <%= cl_image_tag conveying.photos[0].key %>
           <div class="card-infos">
             <h2><%= conveying.start_location %> > <%= conveying.arrival_location %></h2>
             <p>before <%= conveying.arrival_date %></p>
