--- a/app/assets/stylesheets/components/_boat-image.scss
+++ b/app/assets/stylesheets/components/_boat-image.scss
@@ -1,5 +1,22 @@
-.boat-image {
-  overflow: hidden;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+// .boat-image {
+//   overflow: hidden;
+//   background: white;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+// }
+
+.boat-image-parent {
+display: grid;
+ grid-template-columns: 1fr 1fr 1fr 1fr;
+ grid-template-rows: 1fr 1fr;
+}
+
+.boat-image-child-one {
+  grid-row: 1/3;
+  grid-column: 1/3;
+  width: 100%;
+
+}
+
+.boat-image-child-two  {
+  width: 100%;
 }
