--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -33,7 +33,9 @@
           <%= simple_form_for [@conveying, @booking] do |f| %>
             <%= f.input :start_time%>
             <%= f.input :end_time%>
+            <% if policy(Booking).create? %>
             <%= f.button :submit, "Book Conveying", :class => "btn btn-primary w-100" %>
+            <% end %>
           <% end %>
         </div>
       </div>
