--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-      <p class="alert"><%= alert %></p>
+      <p class="notice"><%= notice %></p>
+      <!-- <p class="alert"><%#= alert %></p> -->
     <%= yield %>
     <%= render 'shared/footer' %>
   </body>
