--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,10 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Nunito', "sans-serif";
-$headers-font: 'Nunito', "sans-serif";
+$body-font: 'Quicksand', "sans-serif";
+$headers-font: 'Quicksand', "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
