create update delete conveyings

--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -45,3 +45,9 @@
     </div>
   </div>
 </div>
+
+
+<%= link_to 'edit conveying', edit_conveying_path %>
+<%= link_to 'delete conveying', conveying_path(@conveying), method: :delete, data: {confirm: "Are you sure ?"}  %>
+
+
