--- a/app/views/conveyings/edit.html.erb
+++ b/app/views/conveyings/edit.html.erb
@@ -23,7 +23,7 @@
     <%= f.input :duration%>
     <%= f.input :capacity%>
     <%= f.input :price%>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.input :photo, as: :file %>
     <%= f.button :submit, "Submit", :class => "btn btn-primary w-100" %>
   <% end %>
 </div>
