--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,7 +14,7 @@
   }
 
 .card-infos {
-    padding: 16px;
+    padding: 8px 16px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -23,13 +23,14 @@
   h2 {
     font-size: 16px;
     font-weight: bold;
-    margin-top: 16px;
+    margin-top: 0.5rem;
   }
 
   p {
     font-size: 12px;
     opacity: .7;
-    margin-top: 16px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     }
   }
 }
