--- a/app/views/conveyings/index.html.erb
+++ b/app/views/conveyings/index.html.erb
@@ -11,7 +11,30 @@
       <div class="col-4 my-3">
         <%= link_to conveying_path(conveying) do %>
         <div class="card">
-            <%= cl_image_tag conveying.photos[0].key %>
+          <div id="Carroussel<%= conveying.id %>" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <%  conveying.photos.each_with_index do |photo, index|%>
+                <% if index == 0 %>
+                  <div class="carousel-item active">
+                    <%= cl_image_tag photo.key, class: "d-block w-100"%>
+                  </div>
+                <% else %>
+                  <div class="carousel-item">
+                    <%= cl_image_tag photo.key, class: "d-block w-100"%>
+                  </div>
+                <% end %>
+              <% end %>
+            </div>
+            <a class="carousel-control-prev" href="#Carroussel<%= conveying.id %>" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#Carroussel<%= conveying.id %>" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+            
           <div class="card-infos">
             <div>
               <h2><%= conveying.start_location %> > <%= conveying.arrival_location %></h2>
