--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -1,22 +1,78 @@
-
 <div class="container">
-  <div class="boat-image-parent">
+
+  <!-- TITLE -->
+  <div class="row">
+    <div class="col-sm-10">
+      <h1><%=  @conveying.boat_name %></h1>
+    </div>
+    <div class="col-sm-2">
+      <%= link_to 'edit conveying', edit_conveying_path, class: "btn btn-primary m-0" %>
+    </div>
+  </div>
+
+  <!-- FIRST ROW in mokup -->
+  <div class="row">
+    <div class="col-sm-10">
+      <p>Conveying from : <%= @conveying.start_location%></p>
+    </div>
+    <div class="d-flex col-sm-1">
+      <i class="fas fa-heart light-grey p-1"></i>
+      <p>Save</p>
+    </div>
+    <div class="d-flex col-sm-1">
+      <i class="far fa-share-square light-grey p-1"></i>
+      <p>share</p>
+    </div>
+  </div>
+
+  <!--   SECOND ROW in mockup (conveying pictures) -->
+  <div class="row rounded boat-image-parent ">
       <%= cl_image_tag @conveying.photos.first.key, class: "boat-image-child-one"%>
       <%  @conveying.photos.each do |photo|%>
         <%= cl_image_tag photo.key, class: "boat-image-child-two"%>
       <% end %>
   </div>
+
+  <!--   THIRD ROW @ 2 cols in mockup (boat+owner info + map | calendar) -->
   <div class="row mt-3">
-    <div class="col-6">
-      <h5> <%=  @conveying.boat_name %></h5>
-      <p> Type de bateau : <%= @conveying.boat_type %></p>
-      <p> Lieu de départ : <%= @conveying.start_location %></p>
-      <p> Lieu d'arrivée : <%= @conveying.arrival_location %></p>
-      <p> Date de fin de convoyage : <%= @conveying.arrival_date %></p>
-      <p> Capacité : <%= @conveying.capacity %></p>
-      <p> Rémunération : <%= @conveying.price %>€</p>
+    <div class="col-8 pl-0">
+        <!-- <h2><%=  @conveying.boat_name %></h2> -->
+
+      <div class="border-bottom">
+        <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
+        <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
+        <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
+        <i class="far fa-star" style="color:blue; font-size:12px;"></i>
+        <p style="font-size:12px;">Jean is the owner of this boat</p>
+      </div>
+
+      <div class="d-flex align-items-center">
+        <i class="fas fa-ship pr-3 mt-3" style="color:light-grey;"></i>
+        <p class="mb-0 mt-3"> <%=  @conveying.boat_type %></p>
+      </div>
+
+      <div class="d-flex align-items-center">
+        <i class="fas fa-map-marked-alt pr-3 mt-3" style="color:light-grey;"></i>
+        <p class="mb-0 mt-3"> From <%= @conveying.start_location %> | To <%= @conveying.arrival_location %></p>
+      </div>
+
+      <div class="d-flex align-items-center">
+        <i class="far fa-calendar-check pr-3 mt-3" style="color:light-grey;"></i>
+        <p class="mb-0 mt-3"> Conveying due date <%= @conveying.arrival_date %></p>
+      </div>
+
+      <div class="d-flex align-items-center">
+        <i class="fas fa-user-tie pr-3 mt-3" style="color:light-grey;"></i>
+        <p class="mb-0 mt-3"> Capacité : <%= @conveying.capacity %></p>
+      </div>
+
+      <div class="d-flex align-items-center border-bottom pb-3">
+        <i class="fas fa-money-bill-wave pr-3 mt-3" style="color:light-grey;"></i>
+        <p class="mb-0 mt-3"> Rémunération : <%= @conveying.price %>€</p>
+      </div>
     </div>
-    <div class="col-6">
+
+    <div class="col-4">
       <h5>Pick your dates:</h5>
       <%= simple_form_for [@conveying, @booking] do |f| %>
         <%= f.input :start_time, label: false, as: :string, required: false, input_html: {id: "range_start", class: "d-none"} %>
@@ -30,7 +86,7 @@
 </div>
 
 
-<%= link_to 'edit conveying', edit_conveying_path %>
-<%= link_to 'delete conveying', conveying_path(@conveying), method: :delete, data: {confirm: "Are you sure ?"}  %>
+
+<%#= link_to 'delete conveying', conveying_path(@conveying), method: :delete, data: {confirm: "Are you sure ?"}  %>
 
 
