--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,7 @@ $blue: #023E8A;
 $gray: #414141;
 $light-gray: #585858;
 $white: #FFFFFF;
-$red: #FD1015;
+$red: #ED6A5A;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #539987;
