--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,13 +1,107 @@
-<h2>My conveyings</h2>
-<ul>
-  <% @conveyings.each do |conveying| %>
-    <li> <%= link_to conveying.boat_name, conveying_path(conveying) %></li>
-  <% end %>
-</ul>
+<div class="container">
+  <h1>My dashboard</h1>
 
-<h2>My bookings</h2>
-<ul>
-  <% @bookings.each do |booking| %>
-    <li><%= link_to Conveying.find_by(id: booking.conveying_id).boat_name , conveying_path(booking.conveying_id) %></li>
-  <% end %>
-</ul>
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <a class="nav-link active" id="requests-tab" data-toggle="tab" href="#requests" role="tab" aria-controls="requests" aria-selected="true">Requests</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="my_conveyings-tab" data-toggle="tab" href="#my_conveyings" role="tab" aria-controls="my_conveyings" aria-selected="false">My conveyings</a>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="requests" role="tabpanel" aria-labelledby="requests-tab">
+      <div class="conveying-card d-flex p-3 my-3 border justify-content-between align-items-center rounded shadow">
+        <img src="https://source.unsplash.com/random/100x50" alt="">
+        <div class="flex-grow-1 ml-3">
+          <h4>Marseille > Ajaccio</h4>
+          <p>Date</p>
+        </div>
+        <p><strong>3 requests pending</strong></p>
+      </div>
+
+      <div class="row">
+        <div class="col-4">
+
+          <div class="card skipper-card">
+            <img src="https://source.unsplash.com/random/250x150" alt="">
+
+            <div class="p-3">
+              <div class="d-flex justify-content-between">
+                <h2>Jean Dominique</h2>
+                <h2>4.1 <i class="fas fa-star"></i></h2>
+              </div>
+              <p>19/10/20 - 27-10/20</p>
+              <div class="d-flex justify-content-end">
+                <button class="btn btn-success btn-sm mr-3">Accept</button>
+                <button class="btn btn-danger btn-sm">Decline</button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-4">
+          <div class="card skipper-card">
+            <img src="https://source.unsplash.com/random/250x150" alt="">
+
+            <div class="p-3">
+              <div class="d-flex justify-content-between">
+                <h2>Jean Dominique</h2>
+                <h2>4.1 <i class="fas fa-star"></i></h2>
+              </div>
+              <p>19/10/20 - 27-10/20</p>
+              <div class="d-flex justify-content-end">
+                <button class="btn btn-success btn-sm mr-3">Accept</button>
+                <button class="btn btn-danger btn-sm">Decline</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card skipper-card">
+            <img src="https://source.unsplash.com/random/250x150" alt="">
+
+            <div class="p-3">
+              <div class="d-flex justify-content-between">
+                <h2>Jean Dominique</h2>
+                <h2>4.1 <i class="fas fa-star"></i></h2>
+              </div>
+              <p>19/10/20 - 27-10/20</p>
+              <div class="d-flex justify-content-end">
+                <button class="btn btn-success btn-sm mr-3">Accept</button>
+                <button class="btn btn-danger btn-sm">Decline</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="tab-pane fade" id="my_conveyings" role="tabpanel" aria-labelledby="my_conveyings-tab">
+     <div class="conveying-card d-flex p-3 my-3 border justify-content-between align-items-center rounded shadow">
+        <img src="https://source.unsplash.com/random/100x50" alt="">
+        <div class="flex-grow-1 ml-3">
+          <h4>Marseille > Ajaccio</h4>
+          <p>Date</p>
+        </div>
+        <p>Vincent</p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <ul>
+    <% @conveyings.each do |conveying| %>
+      <li> <%= link_to conveying.boat_name, conveying_path(conveying) %></li>
+    <% end %>
+  </ul>
+
+  <h2>My bookings</h2>
+  <ul>
+    <% @bookings.each do |booking| %>
+      <li><%= link_to Conveying.find_by(id: booking.conveying_id).boat_name , conveying_path(booking.conveying_id) %></li>
+    <% end %>
+  </ul>
+</div>
