--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -70,6 +70,14 @@
         <i class="fas fa-money-bill-wave pr-3 mt-3" style="color:light-grey;"></i>
         <p class="mb-0 mt-3"> Rémunération : <%= @conveying.price %>€</p>
       </div>
+
+      <div id="map-show"
+        style="width: 100%; height: 600px;"
+        data-markers="<%= @marker.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        >
+      </div>
+
     </div>
 
     <div class="col-4">
