--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -49,7 +49,7 @@
                 <h2>Jean Dominique</h2>
                 <h2>4.1 <i class="fas fa-star"></i></h2>
               </div>
-              <p>19/10/20 - 27-10/20</p>
+              <p>19/10/20 - 27/10/20</p>
               <div class="d-flex justify-content-end">
                 <button class="btn btn-success btn-sm mr-3">Accept</button>
                 <button class="btn btn-danger btn-sm">Decline</button>
@@ -78,13 +78,54 @@
 
     </div>
     <div class="tab-pane fade" id="my_conveyings" role="tabpanel" aria-labelledby="my_conveyings-tab">
-     <div class="conveying-card d-flex p-3 my-3 border justify-content-between align-items-center rounded shadow">
-        <img src="https://source.unsplash.com/random/100x50" alt="">
-        <div class="flex-grow-1 ml-3">
-          <h4>Marseille > Ajaccio</h4>
-          <p>Date</p>
+     <div>
+       <h3 class="mt-3">Upcoming</h3>
+       <div class="conveying-card d-flex p my-3 border justify-content-between align-items-center rounded shadow">
+          <img src="https://source.unsplash.com/random/300x150" alt="">
+          <div class="flex-grow-1 ml-3 my-3">
+            <h4>Marseille > Ajaccio</h4>
+            <p>19/10/20 - 27/10/20</p>
+          </div>
+          <div class="d-block mr-3 align-items-center">
+            <img src="https://source.unsplash.com/random/75x75" class="rounded-circle" alt="">
+            <p>Vincent</p>
+            <span class="badge badge-pill badge-success"></span>
+          </div>
         </div>
-        <p>Vincent</p>
+      </div>
+      <div>
+        <div>
+          <h3 class="mt-3">Pending</h3>
+            <div class="conveying-card d-flex p my-3 border justify-content-between align-items-center rounded shadow">
+              <img src="https://source.unsplash.com/random/300x150" alt="">
+            <div class="flex-grow-1 ml-3 my-3">
+              <h4>Marseille > Ajaccio</h4>
+              <p>19/10/20 - 27/10/20</p>
+            </div>
+            <div class="d-block mr-3 align-items-center">
+              <img src="https://source.unsplash.com/random/75x75" class="rounded-circle" alt="">
+              <p>Vincent</p>
+              <span class="badge badge-pill badge-warning"></span>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h3 class="mt-3">Past</h3>
+          <div class="conveying-card d-flex p my-3 border justify-content-between align-items-center rounded shadow">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <div class="flex-grow-1 ml-3 my-3">
+              <h4>Marseille > Ajaccio</h4>
+              <p>19/10/20 - 27/10/20</p>
+            </div>
+            <div class="d-block mr-3 align-items-center">
+              <img src="https://source.unsplash.com/random/75x75" class="rounded-circle" alt="">
+              <p>Vincent</p>
+              <span class="badge badge-pill badge-primary"></span>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </div>
