--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -38,12 +38,12 @@
     <div class="col-8 pl-0">
         <!-- <h2><%=  @conveying.boat_name %></h2> -->
 
-      <div class="border-bottom">
+      <div class="star border-bottom">
         <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
         <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
         <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
         <i class="far fa-star" style="color:blue; font-size:12px;"></i>
-        <p style="font-size:12px;">Jean is the owner of this boat</p>
+        <p style="font-size:12px;"><%= current_user.first_name %> is the owner of this boat</p>
       </div>
 
       <div class="d-flex align-items-center">
@@ -72,7 +72,7 @@
       </div>
 
       <div id="map-show"
-        style="width: 100%; height: 600px;"
+        style="width: 100%; height: 300px;"
         data-markers="<%= @marker.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         >
