--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -88,8 +88,8 @@
           </div>
           <div class="d-block mr-3 align-items-center">
             <img src="https://source.unsplash.com/random/75x75" class="rounded-circle" alt="">
-            <p>Vincent</p>
-            <span class="badge badge-pill badge-success"></span>
+            <p class="text-center">Vincent</p>
+            <p class="text-center"><span class="badge badge-pill badge-success">upcoming</span></p>
           </div>
         </div>
       </div>
@@ -104,8 +104,8 @@
             </div>
             <div class="d-block mr-3 align-items-center">
               <img src="https://source.unsplash.com/random/75x75" class="rounded-circle" alt="">
-              <p>Vincent</p>
-              <span class="badge badge-pill badge-warning"></span>
+              <p class="text-center">Vincent</p>
+              <p class="text-center"><span class="badge badge-pill badge-warning">pending</span></p>
             </div>
           </div>
         </div>
@@ -119,8 +119,8 @@
             </div>
             <div class="d-block mr-3 align-items-center">
               <img src="https://source.unsplash.com/random/75x75" class="rounded-circle" alt="">
-              <p>Vincent</p>
-              <span class="badge badge-pill badge-primary"></span>
+              <p class="text-center">Vincent</p>
+              <p class="text-center"><span class="badge badge-pill badge-primary">done</span></p>
             </div>
           </div>
         </div>
