--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -43,7 +43,9 @@
         <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
         <i class="fas fa-star" style="color:blue; font-size:12px;"></i>
         <i class="far fa-star" style="color:blue; font-size:12px;"></i>
-        <p style="font-size:12px;"><%= current_user.first_name %> is the owner of this boat</p>
+<!--    ATTENTION si on utilise current_user > on ne peut accéder à la show que quand on est log -->
+<!--  <p style="font-size:12px;"><%#= current_user.first_name %> is the owner of this boat</p> -->
+        <p style="font-size:12px;"><%= @conveying.user.first_name %> is the owner of this boat</p>
       </div>
 
       <div class="d-flex align-items-center">
