--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -6,7 +6,7 @@
       <h1><%=  @conveying.boat_name %></h1>
     </div>
     <div class="col-sm-2">
-      <%= link_to 'edit conveying', edit_conveying_path, class: "btn btn-primary m-0" %>
+      <%= link_to 'edit conveying', edit_conveying_path(@conveying), class: "btn btn-primary m-0" %>
     </div>
   </div>
 
