--- a/app/views/conveyings/new.html.erb
+++ b/app/views/conveyings/new.html.erb
@@ -32,7 +32,8 @@
         <%= f.input :arrival_date, as: :string, label: 'Need to arrive before:', required: false, input_html: { class: "datepicker"} %>
       </div>
     </div>
-    <%= f.input :photos, as: :file, input_html: { multiple: true }%>
+    <%= f.input :photos, as: :file, input_html: { multiple: true, id: 'photo-input' } %>
+    <%= image_tag "", width: 300, class: "hidden", id: "photo-preview" %>
     <%= f.button :submit, "Create", :class => "btn btn-primary w-100" %>
   <% end %>
 </div>
