--- a/app/views/conveyings/show.html.erb
+++ b/app/views/conveyings/show.html.erb
@@ -65,12 +65,12 @@
 
       <div class="d-flex align-items-center">
         <i class="fas fa-user-tie pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Capacité : <%= @conveying.capacity %></p>
+        <p class="mb-0 mt-3"> Capacity : <%= @conveying.capacity %></p>
       </div>
 
       <div class="d-flex align-items-center border-bottom pb-3">
         <i class="fas fa-money-bill-wave pr-3 mt-3" style="color:light-grey;"></i>
-        <p class="mb-0 mt-3"> Rémunération : <%= @conveying.price %>€</p>
+        <p class="mb-0 mt-3"> Remuneration : <%= @conveying.price %>€</p>
       </div>
 
       <div id="map-show"
