--- a/app/views/conveyings/index.html.erb
+++ b/app/views/conveyings/index.html.erb
@@ -25,11 +25,11 @@
             <% end %>
           </div>
           <a class="carousel-control-prev" href="#Carroussel<%= conveying.id %>" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <i class="fas fa-chevron-left"></i>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#Carroussel<%= conveying.id %>" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <i class="fas fa-chevron-right"></i>
             <span class="sr-only">Next</span>
           </a>
         </div>
