--- a/app/assets/stylesheets/components/_notice.scss
+++ b/app/assets/stylesheets/components/_notice.scss
@@ -2,8 +2,9 @@
     position: fixed;
     bottom: 100px;
     right: 15px;
-    background-color: white;
-    padding: 2px 4px;
-    border-radius: 2px;
+    background-color: $green;
+    color: white ;
+    padding: 6px 12px;
+    border-radius: 4px;
     border: 1px solid;
 }
