--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,10 +6,10 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-text">
-    <a href="#">Comment ça marche</a>
-    <a href="#">Conditions générales d'utilisation</a>
-    <a href="#">Presse</a>
-    <a href="#">Nous contacter</a>
+    <a href="#">About us</a>
+    <a href="#">FAQ</a>
+    <a href="#">Press</a>
+    <a href="#">Contact</a>
     <a href="#">Copyright © 2020</a>
   </div>
 </div>
