--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -3,24 +3,24 @@
       <div class="col-2">
         <div class="d-flex justify-content-center align-items-center border-right">
           <i class="fas fa-calendar light-grey"></i>
-          <input type="text" class="form-control no-border" placeholder="Date de départ">
+          <input type="text" class="form-control no-border" placeholder="Starting date">
         </div>
       </div>
       <div class="col-2">
         <div class="d-flex justify-content-center align-items-center border-right">
           <i class="fas fa-search-location light-grey"></i>
-          <input type="text" class="form-control no-border" placeholder="Lieu de départ">
+          <input type="text" class="form-control no-border" placeholder="From">
         </div>
       </div>
       <div class="col-2">
         <div class="d-flex justify-content-center align-items-center border-right">
           <i class="fas fa-ship light-grey"></i>
-          <input type="text" class="form-control no-border" placeholder="Type de bateau">
+          <input type="text" class="form-control no-border" placeholder="Type of boat">
         </div>
       </div>
       <div class="col-2 d-flex justify-content-center align-items-center">
           <i class="fas fa-money-bill-wave light-grey"></i>
-          <input type="text" class="form-control no-border" placeholder="Rémunération">
+          <input type="text" class="form-control no-border" placeholder="Remuneration">
       </div>
       <div class="col-1 d-flex justify-content-end align-items-center">
         <%= link_to conveyings_path do %>
