--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -34,7 +34,7 @@
                 <div class="p-3">
                   <div class="d-flex justify-content-between">
                     <h2><%= Booking.find(booking_id).user.first_name %> <%= Booking.find(booking_id).user.last_name %></h2>
-                    <h2>4.1 <i class="fas fa-star"></i></h2>
+                    <h2><%= Booking.find(booking_id).user.rating %> <i class="fas fa-star"></i></h2>
                   </div>
                   <p>from <%= Booking.find(booking_id).start_time.strftime("%d/%m/%Y") %> to <%= Booking.find(booking_id).start_time.strftime("%d/%m/%Y") %></p>
                   <div class="d-flex justify-content-end">
@@ -106,3 +106,4 @@
       <% end %>
     </div>
   </div>
+</div>
